--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background: rgb(207, 195, 164);
+    background: $background;
     background: linear-gradient(90deg, rgba(207, 195, 164, 1) 5%, rgba(219, 208, 182, 1) 31%, rgba(107, 131, 102, 0.7083333333333333) 57%, rgba(5, 131, 79, 0.45) 91%);
     filter: opacity(0.7);
 }
