--- a/css/estilo.css
+++ b/css/estilo.css
@@ -60,6 +60,8 @@
   font-style: oblique; }
 
 .nleft {
+  -webkit-animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   background-image: url(./img/foto-frente-con-efecto.jpeg);
   background-size: cover;
   background-position: center;
@@ -200,6 +202,26 @@
   margin-left: 650px;
   margin-top: 15.625em; }
 
+@-webkit-keyframes tilt-in-top-2 {
+  0% {
+    -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+    transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
+    opacity: 1; } }
+
+@keyframes tilt-in-top-2 {
+  0% {
+    -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+    transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
+    opacity: 1; } }
+
 footer {
   text-align: right;
   margin-top: 0em;
@@ -310,7 +332,7 @@ footer {
   grid-column-start: 4; }
 
 .navbar {
-  background: #cfc3a4;
+  background: #dacfb6;
   background: linear-gradient(90deg, #cfc3a4 5%, #dbd0b6 31%, rgba(107, 131, 102, 0.708333) 57%, rgba(5, 131, 79, 0.45) 91%);
   filter: opacity(0.7); }
 
