--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -73,9 +73,8 @@
 }
 
 .nleft {
-
-    -webkit-animation: swing-in-right-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
-    animation: swing-in-right-fwd 0.5s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+    -webkit-animation: tilt-in-top-2 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: tilt-in-top-2 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 
     background-image: url(./img/foto-frente-con-efecto.jpeg);
     background-size: cover;
@@ -257,40 +256,27 @@
     margin-top: 15.625em;
 }
 
-
-
-@-webkit-keyframes swing-in-right-fwd {
+@-webkit-keyframes tilt-in-top-2 {
     0% {
-        -webkit-transform: rotateY(-100deg);
-        transform: rotateY(-100deg);
-        -webkit-transform-origin: right;
-        transform-origin: right;
-        opacity: 0;
+      -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+              transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+      opacity: 0;
     }
-
     100% {
-        -webkit-transform: rotateY(0);
-        transform: rotateY(0);
-        -webkit-transform-origin: right;
-        transform-origin: right;
-        opacity: 1;
+      -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+              transform: rotateY(0deg) translateY(0) skewY(0deg);
+      opacity: 1;
     }
-}
-
-@keyframes swing-in-right-fwd {
+  }
+  @keyframes tilt-in-top-2 {
     0% {
-        -webkit-transform: rotateY(-100deg);
-        transform: rotateY(-100deg);
-        -webkit-transform-origin: right;
-        transform-origin: right;
-        opacity: 0;
+      -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+              transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+      opacity: 0;
     }
-
     100% {
-        -webkit-transform: rotateY(0);
-        transform: rotateY(0);
-        -webkit-transform-origin: right;
-        transform-origin: right;
-        opacity: 1;
+      -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+              transform: rotateY(0deg) translateY(0) skewY(0deg);
+      opacity: 1;
     }
-}
+  }
