--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@ footer {
     margin-top: 0em;
     margin-bottom: 1em;
     padding-right: 1em;
-    font-size: 2em;
+    font-size: $footerside;
     text-transform: capitalize;
 }
 
