--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -16,7 +16,7 @@
 }
 
 .nav-link {
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-size: 1.1em;
     color: rgb(11, 68, 11);
 
