--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 
 
-@import "scss/variables.scss";
-@import "scss/body.scss";
-@import "scss/footer.scss";
-@import "scss/medias.scss";
-@import "scss/navbar.scss";
+@import "./variables";
+@import "./body";
+@import "./footer";
+@import "./navbar.scss";
+@import "./medias.scss";
