--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -13,14 +13,14 @@
 }
 
 .jumbotron h1 {
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-size: 3em;
     color: rgba(230, 225, 208, 0.97);
     text-shadow: 0 0 4px rgba(159, 154, 119, 0.606);
 }
 
 .jumbotron p {
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-size: 3.2em;
     margin-left: 1em;
     color: rgba(230, 225, 208, 0.97);
@@ -51,7 +51,7 @@
 .card-title {
     text-align: center;
     font-size: $sidetitulo;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     text-decoration: rgb(95, 158, 95);
     color: $colortitulo;
 
@@ -60,7 +60,7 @@
 .card-text {
     font-size: 0.9em;
     color: $colortitulo;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-style: oblique;
 }
 
@@ -68,7 +68,7 @@
     margin-top: 2.5em;
     font-size: 0.9em;
     color: $colortitulo;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-style: oblique;
 }
 
@@ -95,7 +95,7 @@
     margin-bottom: -2em;
     padding: 1em;
     color: rgb(20, 117, 20);
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
 
 }
 
@@ -124,7 +124,7 @@
 
 .nreventos h2 {
     color: rgb(20, 117, 20);
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-size: $titulosp;
     text-align: center;
     margin-top: 1em;
@@ -153,10 +153,9 @@
 
 }
 
-
 .cc-center {
     color: rgb(20, 117, 20);
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-size: $titulosp;
     text-align: center;
 
@@ -165,7 +164,7 @@
 
 .cc-centertext {
     color: rgb(20, 117, 20);
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     font-size: 1.5em;
     text-align: center;
     margin-bottom: -0.1em;
@@ -201,7 +200,7 @@
     background-color: rgba(214, 203, 188, 0.52);
     border-style: none none solid none;
     font-size: 15px;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
 
     outline: none;
     text-align: center;
@@ -219,7 +218,7 @@
     color: darkgray;
     border: solid rgb(105, 127, 105);
     font-size: 15px;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     text-transform: uppercase;
     padding: 1px 6px;
     border-radius: 5px;
@@ -235,7 +234,7 @@
     background-color: rgba(214, 203, 188, 0.52);
     border-style: none none solid none;
     font-size: 15px;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     padding: 10px;
     outline: none;
     text-align: center;
@@ -244,7 +243,7 @@
 
 .text {
     font-size: 38px;
-    font-family: 'Alegreya SC', serif;
+    font-family: $fontside;
     color: rgb(20, 117, 20);
     ;
     text-align: center;
