--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -113,44 +113,36 @@
 
 }
 
-.videoeventos {
-    display: flex;
-    justify-content: center;
-    margin-top: 3em;
-    margin-left: 5em;
-    margin-bottom: 0.6em;
-    filter: sepia(0.5);
-}
+.card-img-top {
 
-.nreventos h2 {
+    -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+
+}
+.card-eventos {
     color: rgb(20, 117, 20);
     font-family: $fontside;
     font-size: $titulosp;
-    text-align: center;
-    margin-top: 1em;
-
+    text-align: right;
+    margin-top: 1.5em;
 }
-
-.nreventos ul li {
+.card-listaeventos li {
     color: rgb(92, 142, 92);
     font-family: 'Neucha', cursive;
     font-size: 1.5em;
-    text-align: center;
+    text-align: right;
     list-style: none;
+    margin-top: 1em;
+}
+
+@mixin tamgal ($ancho, $alto) {
+    width: $ancho;
+    height: $alto;
 }
 
 .main-galeria {
     background-color: rgba(188, 168, 144, 0.52);
-    width: 1448px;
-    height: 800px;
-}
-
-
-.mapa {
-
-    margin-right: 40px;
-
-
+    @include tamgal(1448px, 800px);
 }
 
 .cc-center {
@@ -158,8 +150,6 @@
     font-family: $fontside;
     font-size: $titulosp;
     text-align: center;
-
-
 }
 
 .cc-centertext {
@@ -184,11 +174,9 @@
     font-size: 1.3em;
 }
 
-.orden {
+.form{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 2.5em;
+    justify-content: space-around;
 }
 
 
@@ -229,7 +217,7 @@
 
 .textarea {
     color: darkgray;
-    display: inline;
+    display: flex;
     margin-top: 15px;
     background-color: rgba(214, 203, 188, 0.52);
     border-style: none none solid none;
@@ -238,7 +226,6 @@
     padding: 10px;
     outline: none;
     text-align: center;
-
 }
 
 .text {
@@ -249,6 +236,13 @@
     text-align: center;
 }
 
+.map {
+
+    -webkit-animation: scale-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: scale-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+
+}
+
 .center {
     position: relative;
     margin-left: 650px;
@@ -257,25 +251,90 @@
 
 @-webkit-keyframes tilt-in-top-2 {
     0% {
-      -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
-              transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
-      opacity: 0;
+        -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+        transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+        opacity: 0;
     }
+
     100% {
-      -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
-              transform: rotateY(0deg) translateY(0) skewY(0deg);
-      opacity: 1;
+        -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+        transform: rotateY(0deg) translateY(0) skewY(0deg);
+        opacity: 1;
     }
-  }
-  @keyframes tilt-in-top-2 {
+}
+
+@keyframes tilt-in-top-2 {
     0% {
-      -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
-              transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+        -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+        transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+        transform: rotateY(0deg) translateY(0) skewY(0deg);
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes scale-in-top {
+    0% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        -webkit-transform-origin: 50% 0%;
+        transform-origin: 50% 0%;
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: 50% 0%;
+        transform-origin: 50% 0%;
+        opacity: 1;
+    }
+}
+
+@keyframes scale-in-top {
+    0% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+        -webkit-transform-origin: 50% 0%;
+        transform-origin: 50% 0%;
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: 50% 0%;
+        transform-origin: 50% 0%;
+        opacity: 1;
+    }
+}
+
+ @-webkit-keyframes tilt-in-fwd-tr {
+    0% {
+      -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+              transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
       opacity: 0;
     }
     100% {
-      -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
-              transform: rotateY(0deg) translateY(0) skewY(0deg);
+      -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+              transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
       opacity: 1;
     }
   }
+  @keyframes tilt-in-fwd-tr {
+    0% {
+      -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+              transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+              transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+      opacity: 1;
+    }
+  }
+  
