--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 600px) {
-    .row{
+    .row {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -12,11 +12,17 @@
         grid-template-columns: repeat(1, 1fr);
         padding: 5px;
         grid-gap: 10px;
+        -webkit-animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+        animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    }
+
+    @mixin tamanos($ancho, $alto) {
+        width: $ancho;
+        height: $alto;
     }
 
     .galery__img {
-        width: 100%;
-        height: 100%;
+        @include tamanos(100%, 100%);
         object-fit: cover;
     }
 
@@ -64,18 +70,24 @@
         text-transform: capitalize;
     }
 }
+
 .galery-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 150px;
     padding: 5px;
     grid-gap: 10px;
+    -webkit-animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 
+@mixin tamanos($ancho, $alto) {
+    width: $ancho;
+    height: $alto;
+}
 .galery__img {
-    width: 100%;
-    height: 100%;
+    @include tamanos(100%, 100%);
     object-fit: cover;
 }
 
@@ -115,6 +127,7 @@
 }
 
 .galery--item>img:hover {
+
     filter: contrast(2.2);
 }
 
@@ -131,5 +144,28 @@
     grid-column-start: 4;
 }
 
-
-
+ @-webkit-keyframes fade-in-top {
+    0% {
+      -webkit-transform: translateY(-50px);
+              transform: translateY(-50px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes fade-in-top {
+    0% {
+      -webkit-transform: translateY(-50px);
+              transform: translateY(-50px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  
