--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,11 +1,27 @@
-$colortitulo:rgb(6, 119, 6);
+$colortitulo: rgb(6, 119, 6);
 
 $sidetitulo: 1.6em;
 
-$titulosp:2.5em;
+$titulosp: 2.5em;
 
-$background:rgb(218, 207, 182);
+$background: rgb(218, 207, 182);
 
 $footerside: 2em;
 
 $fontside: 'Alegreya SC', serif;
+
+%iconos {
+    margin-top: 0em;
+    color: rgb(63, 100, 63);
+    letter-spacing: 5px;
+    margin-bottom: 0em;
+
+    &:hover { font-size: 1em;
+    transform: scale(1.2);
+    transition: all 1s ease;
+    color: rgb(81, 135, 81);
+    letter-spacing: 5px;
+
+}
+
+}
