--- a/scss/main.css
+++ b/scss/main.css
@@ -1,18 +1,21 @@
 .redes a i {
   margin-top: 0em;
-  color: #3f643f;
+  color: rgb(63, 100, 63);
   letter-spacing: 5px;
-  margin-bottom: 0em; }
-  .redes a i:hover {
-    font-size: 1em;
-    transform: scale(1.2);
-    transition: all 1s ease;
-    color: #518751;
-    letter-spacing: 5px; }
+  margin-bottom: 0em;
+}
+.redes a i:hover {
+  font-size: 1em;
+  transform: scale(1.2);
+  transition: all 1s ease;
+  color: rgb(81, 135, 81);
+  letter-spacing: 5px;
+}
 
 .bg-body {
-  background-color: #dacfb6;
-  margin-bottom: -4em; }
+  background-color: rgb(218, 207, 182);
+  margin-bottom: -4em;
+}
 
 .jumbotron {
   background-image: url(./img/ovejasthebarn.jpeg);
@@ -20,56 +23,67 @@
   background-position: bottom;
   margin-top: 0.3em;
   margin-bottom: 0em;
-  height: 40.5rem; }
+  height: 40.5rem;
+}
 
 .jumbotron h1 {
   font-family: "Alegreya SC", serif;
   font-size: 3em;
   color: rgba(230, 225, 208, 0.97);
-  text-shadow: 0 0 4px rgba(159, 154, 119, 0.606); }
+  text-shadow: 0 0 4px rgba(159, 154, 119, 0.606);
+}
 
 .jumbotron p {
   font-family: "Alegreya SC", serif;
   font-size: 3.2em;
   margin-left: 1em;
   color: rgba(230, 225, 208, 0.97);
-  text-shadow: 0 0 4px rgba(159, 154, 119, 0.606); }
+  text-shadow: 0 0 4px rgba(159, 154, 119, 0.606);
+}
 
 .container-servicios {
   display: flex;
   margin-top: 1.5em;
   margin-bottom: 20em;
-  margin-left: 5.5em; }
+  margin-left: 5.5em;
+}
 
 .col-sm-8 {
   padding: 1em;
-  display: center; }
+  display: center;
+}
 
 .img-servicio {
-  margin-top: 1em; }
+  margin-top: 1em;
+}
 
 .text-servicio {
-  margin-top: 0.5em; }
+  margin-top: 0.5em;
+}
 
 .card-title {
   text-align: center;
   font-size: 1.6em;
   font-family: "Alegreya SC", serif;
-  text-decoration: #5f9e5f;
-  color: #067706; }
+  -webkit-text-decoration: rgb(95, 158, 95);
+          text-decoration: rgb(95, 158, 95);
+  color: rgb(6, 119, 6);
+}
 
 .card-text {
   font-size: 0.9em;
-  color: #067706;
+  color: rgb(6, 119, 6);
   font-family: "Alegreya SC", serif;
-  font-style: oblique; }
+  font-style: oblique;
+}
 
 .card-text1 {
   margin-top: 2.5em;
   font-size: 0.9em;
-  color: #067706;
+  color: rgb(6, 119, 6);
   font-family: "Alegreya SC", serif;
-  font-style: oblique; }
+  font-style: oblique;
+}
 
 .nleft {
   -webkit-animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
@@ -79,81 +93,95 @@
   background-position: center;
   height: 450px;
   margin-top: 3em;
-  margin-bottom: 10em; }
+  margin-bottom: 10em;
+}
 
 .nleft:hover {
-  filter: grayscale(1.5); }
+  filter: grayscale(1.5);
+}
 
 .nright h2 {
   font-size: 2.5em;
   margin-top: 2em;
   margin-bottom: -2em;
   padding: 1em;
-  color: #147514;
-  font-family: "Alegreya SC", serif; }
+  color: rgb(20, 117, 20);
+  font-family: "Alegreya SC", serif;
+}
 
 .nright p {
   font-size: 1.3em;
-  color: #5c8e5c;
-  font-family: 'Neucha', cursive;
+  color: rgb(92, 142, 92);
+  font-family: "Neucha", cursive;
   margin: 3em;
-  text-align: justify; }
+  text-align: justify;
+}
 
 .item {
   height: 250px;
-  border: 2px solid #131210; }
+  border: 2px solid rgb(19, 18, 16);
+}
 
 .card-img-top {
   -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+  animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
 
 .card-eventos {
-  color: #147514;
+  color: rgb(20, 117, 20);
   font-family: "Alegreya SC", serif;
   font-size: 2.5em;
   text-align: right;
-  margin-top: 1.5em; }
+  margin-top: 1.5em;
+}
 
 .card-listaeventos li {
-  color: #5c8e5c;
-  font-family: 'Neucha', cursive;
+  color: rgb(92, 142, 92);
+  font-family: "Neucha", cursive;
   font-size: 1.5em;
   text-align: right;
   list-style: none;
-  margin-top: 1em; }
+  margin-top: 1em;
+}
 
 .main-galeria {
   background-color: rgba(188, 168, 144, 0.52);
   width: 1448px;
-  height: 800px; }
+  height: 800px;
+}
 
 .cc-center {
-  color: #147514;
+  color: rgb(20, 117, 20);
   font-family: "Alegreya SC", serif;
   font-size: 2.5em;
-  text-align: center; }
+  text-align: center;
+}
 
 .cc-centertext {
-  color: #147514;
+  color: rgb(20, 117, 20);
   font-family: "Alegreya SC", serif;
   font-size: 1.5em;
   text-align: center;
-  margin-bottom: -0.1em; }
+  margin-bottom: -0.1em;
+}
 
 .card {
-  background-color: #dacfb6;
+  background-color: rgb(218, 207, 182);
   text-align: center;
-  border: none; }
+  border: none;
+}
 
 .carta-texto {
   margin-bottom: -0.2em;
-  color: #5c8e5c;
-  font-family: 'Neucha', cursive;
-  font-size: 1.3em; }
+  color: rgb(92, 142, 92);
+  font-family: "Neucha", cursive;
+  font-size: 1.3em;
+}
 
 .form {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .form input {
   color: darkgray;
@@ -165,23 +193,26 @@
   font-size: 15px;
   font-family: "Alegreya SC", serif;
   outline: none;
-  text-align: center; }
+  text-align: center;
+}
 
 .button:hover {
-  background-color: #599f7a;
-  color: #164216;
-  border: none; }
+  background-color: rgb(89, 159, 122);
+  color: rgb(22, 66, 22);
+  border: none;
+}
 
 .button {
   color: darkgray;
-  border: solid #697f69;
+  border: solid rgb(105, 127, 105);
   font-size: 15px;
   font-family: "Alegreya SC", serif;
   text-transform: uppercase;
   padding: 1px 6px;
   border-radius: 5px;
   background: rgba(214, 203, 188, 0.52);
-  margin: 0.8em; }
+  margin: 0.8em;
+}
 
 .textarea {
   color: darkgray;
@@ -193,134 +224,143 @@
   font-family: "Alegreya SC", serif;
   padding: 10px;
   outline: none;
-  text-align: center; }
+  text-align: center;
+}
 
 .text {
   font-size: 38px;
   font-family: "Alegreya SC", serif;
-  color: #147514;
-  text-align: center; }
+  color: rgb(20, 117, 20);
+  text-align: center;
+}
 
 .map {
   -webkit-animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+  animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
 
 .center {
   position: relative;
   margin-left: 650px;
-  margin-top: 15.625em; }
+  margin-top: 15.625em;
+}
 
 @-webkit-keyframes tilt-in-top-2 {
   0% {
-    -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
     transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
     transform: rotateY(0deg) translateY(0) skewY(0deg);
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 @keyframes tilt-in-top-2 {
   0% {
-    -webkit-transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
     transform: rotateY(-30deg) translateY(-300px) skewY(30deg);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
     transform: rotateY(0deg) translateY(0) skewY(0deg);
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 @-webkit-keyframes scale-in-top {
   0% {
-    -webkit-transform: scale(0);
     transform: scale(0);
-    -webkit-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
-    opacity: 1; }
+    opacity: 1;
+  }
   100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
-    -webkit-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 @keyframes scale-in-top {
   0% {
-    -webkit-transform: scale(0);
     transform: scale(0);
-    -webkit-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
-    opacity: 1; }
+    opacity: 1;
+  }
   100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
-    -webkit-transform-origin: 50% 0%;
     transform-origin: 50% 0%;
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 @-webkit-keyframes tilt-in-fwd-tr {
   0% {
-    -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
     transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
     transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 @keyframes tilt-in-fwd-tr {
   0% {
-    -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
     transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
     transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 footer {
   text-align: right;
   margin-top: 0em;
   margin-bottom: 1em;
   padding-right: 1em;
   font-size: 2em;
-  text-transform: capitalize; }
+  text-transform: capitalize;
+}
 
 .redes-contacto {
-  margin-top: 1.0em; }
+  margin-top: 1em;
+}
 
 .navbar {
-  background: #dacfb6;
-  background: linear-gradient(90deg, #cfc3a4 5%, #dbd0b6 31%, rgba(107, 131, 102, 0.708333) 57%, rgba(5, 131, 79, 0.45) 91%);
-  filter: opacity(0.7); }
+  background: rgb(218, 207, 182);
+  background: linear-gradient(90deg, rgb(207, 195, 164) 5%, rgb(219, 208, 182) 31%, rgba(107, 131, 102, 0.7083333333) 57%, rgba(5, 131, 79, 0.45) 91%);
+  filter: opacity(0.7);
+}
 
 .img {
   width: 80px;
   height: 80px;
-  color: #0b440b; }
+  color: rgb(11, 68, 11);
+}
 
 .img:hover {
-  filter: opacity(0.5); }
+  filter: opacity(0.5);
+}
 
 .nav-link {
   font-family: "Alegreya SC", serif;
   font-size: 1.1em;
-  color: #0b440b; }
+  color: rgb(11, 68, 11);
+}
 
 .nav-link:hover {
-  color: #454118;
+  color: rgb(69, 65, 24);
   text-shadow: 0 0 5px hwb(127 23% 57%);
-  text-transform: capitalize; }
+  text-transform: capitalize;
+}
 
 .navbar-toggler-icon:hover {
-  text-shadow: 0 0 5px hwb(127 23% 57%); }
+  text-shadow: 0 0 5px hwb(127 23% 57%);
+}
 
 @media screen and (max-width: 600px) {
   .row {
     display: flex;
     flex-direction: column;
-    align-items: center; } }
-
+    align-items: center;
+  }
+}
 @media screen and (max-width: 600px) {
   .galery-container {
     display: grid;
@@ -328,33 +368,44 @@ footer {
     padding: 5px;
     grid-gap: 10px;
     -webkit-animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-    animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
+    animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  }
   .galery__img {
     width: 100%;
     height: 100%;
-    object-fit: cover; }
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
   .galery--item:nth-child(2) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .galery--item:nth-child(1) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .galery--item:nth-child(6) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .galery--item:nth-child(3) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .galery--item:nth-child(5) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .galery--item:nth-child(4) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .galery--item:nth-child(7) {
-    grid-column-start: span 8; }
+    grid-column-start: span 8;
+  }
   .footer-galeria {
     text-align: right;
     margin-top: 50em;
     margin-bottom: 0em;
     padding-right: 1em;
     font-size: 2em;
-    text-transform: capitalize; } }
-
+    text-transform: capitalize;
+  }
+}
 .galery-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -362,36 +413,47 @@ footer {
   padding: 5px;
   grid-gap: 10px;
   -webkit-animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
+  animation: fade-in-top 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
 
 .galery__img {
   width: 100%;
   height: 100%;
-  object-fit: cover; }
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 
 .galery--item:nth-child(2) {
-  grid-row-start: span 2; }
+  grid-row-start: span 2;
+}
 
 .galery--item:nth-child(1) {
-  grid-row-start: span 3; }
+  grid-row-start: span 3;
+}
 
 .galery--item:nth-child(6) {
-  grid-row-start: span 2; }
+  grid-row-start: span 2;
+}
 
 .galery--item:nth-child(3) {
-  grid-row-start: span 2; }
+  grid-row-start: span 2;
+}
 
 .galery--item:nth-child(4) {
-  grid-column-start: span 0; }
+  grid-column-start: span 0;
+}
 
 .galery--item:nth-child(5) {
-  grid-row-start: span 3; }
+  grid-row-start: span 3;
+}
 
 .galery--item:nth-child(7) {
-  grid-row-start: span 2; }
+  grid-row-start: span 2;
+}
 
 .galery--item > img:hover {
-  filter: contrast(2.2); }
+  filter: contrast(2.2);
+}
 
 .datos {
   display: grid;
@@ -399,27 +461,30 @@ footer {
   grid-auto-rows: 8em;
   padding: 7em;
   grid-gap: 1em;
-  margin: 18.125em; }
+  margin: 18.125em;
+}
 
 .datos1:nth-child(4) {
-  grid-column-start: 4; }
+  grid-column-start: 4;
+}
 
 @-webkit-keyframes fade-in-top {
   0% {
-    -webkit-transform: translateY(-50px);
     transform: translateY(-50px);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
-    opacity: 1; } }
-
+    opacity: 1;
+  }
+}
 @keyframes fade-in-top {
   0% {
-    -webkit-transform: translateY(-50px);
     transform: translateY(-50px);
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
-    opacity: 1; } }
+    opacity: 1;
+  }
+}/*# sourceMappingURL=main.css.map */
