--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 
 
-@import "./variables";
-@import "./body";
-@import "./footer";
+@import "./variables.scss";
+@import "./body.scss";
+@import "./footer.scss";
 @import "./navbar.scss";
 @import "./medias.scss";
