--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,14 +1,16 @@
 $colortitulo: rgb(6, 119, 6);
 
-$sidetitulo: 1.6em;
+$sidetitulo: 2rem;
 
-$titulosp: 2.5em;
+$titulosp: 2rem;
 
 $background: rgb(218, 207, 182);
 
 $footerside: 2em;
 
 $fontside: 'Alegreya SC', serif;
+
+$fontsidebody:'Neucha', cursive;
 
 %iconos {
     margin-top: 0em;
