--- a/estilo.css
+++ b/estilo.css
@@ -15,7 +15,7 @@
   margin-bottom: -4em; }
 
 .jumbotron {
-  background-image: url(./img/ovejasthebarn.jpeg);
+  background-image: url(../img/ovejasthebarn.jpeg);
   background-size: cover;
   background-position: bottom;
   margin-top: 0.3em;
@@ -46,35 +46,33 @@
   display: center; }
 
 .img-servicio {
-  margin-top: 1em; }
+  margin-top: 0.5em; }
 
 .text-servicio {
-  margin-top: 0.5em; }
+  margin-top: 0.2em; }
 
 .card-title {
   text-align: center;
-  font-size: 1.6em;
+  font-size: 2rem;
   font-family: "Alegreya SC", serif;
   text-decoration: #5f9e5f;
   color: #067706; }
 
 .card-text {
-  font-size: 0.9em;
+  font-size: 1em;
   color: #067706;
-  font-family: "Alegreya SC", serif;
-  font-style: oblique; }
+  font-family: "Neucha", cursive; }
 
 .card-text1 {
   margin-top: 2.5em;
-  font-size: 0.9em;
+  font-size: 1em;
   color: #067706;
-  font-family: "Alegreya SC", serif;
-  font-style: oblique; }
+  font-family: "Neucha", cursive; }
 
 .nleft {
-  -webkit-animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  background-image: url(./img/foto-frente-con-efecto.jpeg);
+  -webkit-animation: tilt-in-top-1 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+  animation: tilt-in-top-1 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+  background-image: url(../img/foto-frente-con-efecto.jpeg);
   background-size: cover;
   background-position: center;
   height: 450px;
@@ -85,7 +83,7 @@
   filter: grayscale(1.5); }
 
 .nright h2 {
-  font-size: 2.5em;
+  font-size: 2rem;
   margin-top: 2em;
   margin-bottom: -2em;
   padding: 1em;
@@ -95,7 +93,7 @@
 .nright p {
   font-size: 1.3em;
   color: #5c8e5c;
-  font-family: 'Neucha', cursive;
+  font-family: "Neucha", cursive;
   margin: 3em;
   text-align: justify; }
 
@@ -106,18 +104,27 @@
 .card-img-top {
   -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+  .card-img-top:hover {
+    filter: brightness(1.3); }
+
+.efecto {
+  -webkit-animation: bounce-in-top 1.1s both;
+  animation: bounce-in-top 1.1s both;
+  filter: opacity(2.5); }
+  .efecto:hover {
+    filter: brightness(1.5); }
 
 .card-eventos {
   color: #147514;
   font-family: "Alegreya SC", serif;
-  font-size: 2.5em;
+  font-size: 2rem;
   text-align: right;
   margin-top: 1.5em; }
 
 .card-listaeventos li {
   color: #5c8e5c;
-  font-family: 'Neucha', cursive;
-  font-size: 1.5em;
+  font-family: "Neucha", cursive;
+  font-size: 1.3em;
   text-align: right;
   list-style: none;
   margin-top: 1em; }
@@ -130,7 +137,7 @@
 .cc-center {
   color: #147514;
   font-family: "Alegreya SC", serif;
-  font-size: 2.5em;
+  font-size: 2rem;
   text-align: center; }
 
 .cc-centertext {
@@ -148,7 +155,7 @@
 .carta-texto {
   margin-bottom: -0.2em;
   color: #5c8e5c;
-  font-family: 'Neucha', cursive;
+  font-family: "Neucha", cursive;
   font-size: 1.3em; }
 
 .form {
@@ -203,7 +210,8 @@
 
 .map {
   -webkit-animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+  animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  margin-bottom: 0.8em; }
 
 .center {
   position: relative;
@@ -277,6 +285,114 @@
     -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
     transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
     opacity: 1; } }
+
+@-webkit-keyframes tilt-in-top-1 {
+  0% {
+    -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+    transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
+    opacity: 1; } }
+
+@keyframes tilt-in-top-1 {
+  0% {
+    -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+    transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
+    opacity: 1; } }
+
+@-webkit-keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0; }
+  38% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1; }
+  55% {
+    -webkit-transform: translateY(-65px);
+    transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  72% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  81% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  90% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  95% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; } }
+
+@keyframes bounce-in-top {
+  0% {
+    -webkit-transform: translateY(-500px);
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0; }
+  38% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1; }
+  55% {
+    -webkit-transform: translateY(-65px);
+    transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  72% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  81% {
+    -webkit-transform: translateY(-28px);
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  90% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  95% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; } }
 
 footer {
   text-align: right;
