--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -4,7 +4,7 @@
 }
 
 .jumbotron {
-    background-image: url(./img/ovejasthebarn.jpeg);
+    background-image: url(../img/ovejasthebarn.jpeg);
     background-size: cover;
     background-position: bottom;
     margin-top: 0.3em;
@@ -41,11 +41,11 @@
 
 
 .img-servicio {
-    margin-top: 1em;
+    margin-top: 0.5em;
 }
 
 .text-servicio {
-    margin-top: 0.5em;
+    margin-top: 0.2em;
 }
 
 .card-title {
@@ -58,25 +58,25 @@
 }
 
 .card-text {
-    font-size: 0.9em;
+    font-size: 1em;
     color: $colortitulo;
-    font-family: $fontside;
-    font-style: oblique;
+    font-family: $fontsidebody;
+    
 }
 
 .card-text1 {
     margin-top: 2.5em;
-    font-size: 0.9em;
+    font-size: 1em;
     color: $colortitulo;
-    font-family: $fontside;
-    font-style: oblique;
+    font-family: $fontsidebody;
+
 }
 
 .nleft {
-    -webkit-animation: tilt-in-top-2 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: tilt-in-top-2 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    -webkit-animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
+    animation: tilt-in-top-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
 
-    background-image: url(./img/foto-frente-con-efecto.jpeg);
+    background-image: url(../img/foto-frente-con-efecto.jpeg);
     background-size: cover;
     background-position: center;
     height: 450px;
@@ -90,7 +90,7 @@
 }
 
 .nright h2 {
-    font-size: $titulosp;
+    font-size: 2rem;
     margin-top: 2em;
     margin-bottom: -2em;
     padding: 1em;
@@ -102,7 +102,7 @@
 .nright p {
     font-size: 1.3em;
     color: rgb(92, 142, 92);
-    font-family: 'Neucha', cursive;
+    font-family: $fontsidebody;
     margin: 3em;
     text-align: justify;
 }
@@ -118,7 +118,18 @@
     -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 
+    &:hover{filter: brightness(1.3);
 }
+}
+.efecto {
+
+    -webkit-animation: bounce-in-top 1.1s both;
+    animation: bounce-in-top 1.1s both;
+    filter: opacity(2.5);
+   &:hover{ filter: brightness(1.5);}
+}
+
+
 .card-eventos {
     color: rgb(20, 117, 20);
     font-family: $fontside;
@@ -126,10 +137,11 @@
     text-align: right;
     margin-top: 1.5em;
 }
+
 .card-listaeventos li {
     color: rgb(92, 142, 92);
-    font-family: 'Neucha', cursive;
-    font-size: 1.5em;
+    font-family: $fontsidebody;
+    font-size: 1.3em;
     text-align: right;
     list-style: none;
     margin-top: 1em;
@@ -170,11 +182,11 @@
 .carta-texto {
     margin-bottom: -0.2em;
     color: rgb(92, 142, 92);
-    font-family: 'Neucha', cursive;
+    font-family: $fontsidebody;
     font-size: 1.3em;
 }
 
-.form{
+.form {
     display: flex;
     justify-content: space-around;
 }
@@ -240,6 +252,7 @@
 
     -webkit-animation: scale-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: scale-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    margin-bottom: 0.8em;
 
 }
 
@@ -313,28 +326,179 @@
     }
 }
 
- @-webkit-keyframes tilt-in-fwd-tr {
+@-webkit-keyframes tilt-in-fwd-tr {
     0% {
-      -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-              transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-      opacity: 0;
+        -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+        transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+        opacity: 0;
     }
+
     100% {
-      -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-              transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-      opacity: 1;
+        -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+        transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+        opacity: 1;
     }
-  }
-  @keyframes tilt-in-fwd-tr {
+}
+
+@keyframes tilt-in-fwd-tr {
     0% {
-      -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-              transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
-      opacity: 0;
+        -webkit-transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+        transform: rotateY(20deg) rotateX(35deg) translate(300px, -300px) skew(-35deg, 10deg);
+        opacity: 0;
     }
+
     100% {
-      -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-              transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-      opacity: 1;
+        -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+        transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+        opacity: 1;
     }
-  }
-  
+}
+
+
+@-webkit-keyframes tilt-in-top-1 {
+    0% {
+        -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+        transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+        transform: rotateY(0deg) translateY(0) skewY(0deg);
+        opacity: 1;
+    }
+}
+
+@keyframes tilt-in-top-1 {
+    0% {
+        -webkit-transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+        transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+        transform: rotateY(0deg) translateY(0) skewY(0deg);
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes bounce-in-top {
+    0% {
+        -webkit-transform: translateY(-500px);
+        transform: translateY(-500px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+
+    38% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+        opacity: 1;
+    }
+
+    55% {
+        -webkit-transform: translateY(-65px);
+        transform: translateY(-65px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+
+    72% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+
+    81% {
+        -webkit-transform: translateY(-28px);
+        transform: translateY(-28px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+
+    90% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+
+    95% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+}
+
+@keyframes bounce-in-top {
+    0% {
+        -webkit-transform: translateY(-500px);
+        transform: translateY(-500px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+
+    38% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+        opacity: 1;
+    }
+
+    55% {
+        -webkit-transform: translateY(-65px);
+        transform: translateY(-65px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+
+    72% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+
+    81% {
+        -webkit-transform: translateY(-28px);
+        transform: translateY(-28px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+
+    90% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+
+    95% {
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+}
