--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -3,12 +3,15 @@
     background: linear-gradient(90deg, rgba(207, 195, 164, 1) 5%, rgba(219, 208, 182, 1) 31%, rgba(107, 131, 102, 0.7083333333333333) 57%, rgba(5, 131, 79, 0.45) 91%);
     filter: opacity(0.7);
 }
-
+@mixin tamanos($ancho, $alto) {
+    width: $ancho;
+    height: $alto;
+}
 .img {
-    width: 80px;
-    height: 80px;
+    @include tamanos(80px,80px );
     color: rgb(11, 68, 11);
 }
+   
 
 .img:hover {
     filter: opacity(0.5);
