--- a/scss/main.css
+++ b/scss/main.css
@@ -18,7 +18,7 @@
 }
 
 .jumbotron {
-  background-image: url(./img/ovejasthebarn.jpeg);
+  background-image: url(../img/ovejasthebarn.jpeg);
   background-size: cover;
   background-position: bottom;
   margin-top: 0.3em;
@@ -54,16 +54,16 @@
 }
 
 .img-servicio {
-  margin-top: 1em;
+  margin-top: 0.5em;
 }
 
 .text-servicio {
-  margin-top: 0.5em;
+  margin-top: 0.2em;
 }
 
 .card-title {
   text-align: center;
-  font-size: 1.6em;
+  font-size: 2rem;
   font-family: "Alegreya SC", serif;
   -webkit-text-decoration: rgb(95, 158, 95);
           text-decoration: rgb(95, 158, 95);
@@ -71,24 +71,22 @@
 }
 
 .card-text {
-  font-size: 0.9em;
+  font-size: 1em;
   color: rgb(6, 119, 6);
-  font-family: "Alegreya SC", serif;
-  font-style: oblique;
+  font-family: "Neucha", cursive;
 }
 
 .card-text1 {
   margin-top: 2.5em;
-  font-size: 0.9em;
+  font-size: 1em;
   color: rgb(6, 119, 6);
-  font-family: "Alegreya SC", serif;
-  font-style: oblique;
+  font-family: "Neucha", cursive;
 }
 
 .nleft {
-  -webkit-animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: tilt-in-top-2 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  background-image: url(./img/foto-frente-con-efecto.jpeg);
+  -webkit-animation: tilt-in-top-1 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+  animation: tilt-in-top-1 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
+  background-image: url(../img/foto-frente-con-efecto.jpeg);
   background-size: cover;
   background-position: center;
   height: 450px;
@@ -101,7 +99,7 @@
 }
 
 .nright h2 {
-  font-size: 2.5em;
+  font-size: 2rem;
   margin-top: 2em;
   margin-bottom: -2em;
   padding: 1em;
@@ -126,11 +124,23 @@
   -webkit-animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: tilt-in-fwd-tr 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
+.card-img-top:hover {
+  filter: brightness(1.3);
+}
+
+.efecto {
+  -webkit-animation: bounce-in-top 1.1s both;
+  animation: bounce-in-top 1.1s both;
+  filter: opacity(2.5);
+}
+.efecto:hover {
+  filter: brightness(1.5);
+}
 
 .card-eventos {
   color: rgb(20, 117, 20);
   font-family: "Alegreya SC", serif;
-  font-size: 2.5em;
+  font-size: 2rem;
   text-align: right;
   margin-top: 1.5em;
 }
@@ -138,7 +148,7 @@
 .card-listaeventos li {
   color: rgb(92, 142, 92);
   font-family: "Neucha", cursive;
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-align: right;
   list-style: none;
   margin-top: 1em;
@@ -153,7 +163,7 @@
 .cc-center {
   color: rgb(20, 117, 20);
   font-family: "Alegreya SC", serif;
-  font-size: 2.5em;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -237,6 +247,7 @@
 .map {
   -webkit-animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: scale-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  margin-bottom: 0.8em;
 }
 
 .center {
@@ -307,6 +318,114 @@
   100% {
     transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
     opacity: 1;
+  }
+}
+@-webkit-keyframes tilt-in-top-1 {
+  0% {
+    transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
+    opacity: 1;
+  }
+}
+@keyframes tilt-in-top-1 {
+  0% {
+    transform: rotateY(30deg) translateY(-300px) skewY(-30deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateY(0deg) translateY(0) skewY(0deg);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes bounce-in-top {
+  0% {
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes bounce-in-top {
+  0% {
+    transform: translateY(-500px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    transform: translateY(-65px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    transform: translateY(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    transform: translateY(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    transform: translateY(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
 }
 footer {
